# pywarthog

./: .readthedocs.yaml  pyproject.toml  setup.py
pywarthog/src/: pywarthog.py
pywarthog/src/pywarthog.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/: conf.py  index.rst  usage.rst
src/: pywarthog.py
