[project]
name = "pywarthog"
version = "0.0.1"
authors = [
  { name="zzjulienr", email="tpypi@zzjulien.maskmy.id" },
]
description = "A Python library for the Warthog API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/zzjulienr/pywarthog"
Issues = "https://github.com/zzjulienr/pywarthog/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

